Add stagin of kibana Generate the passwords via elasticsearch-setup-passwords Apply password to kibana template and deploy Inform the user of their elastic user login

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ COMPOSE_PROJECT_NAME=es
 CERTS_DIR=/usr/share/elasticsearch/config/certificates
 VERSION=7.7.0
 ELASTIC_STACK_NAME=jlastic
+KIBANA_STACK_NAME=jlastic-kibana
 MASTER_NODE_HOSTNAME=elastic-1
 ELASTIC1_HOSTNAME=elastic-1
 ELASTIC2_HOSTNAME=elastic-2
