--- a/kibana-docker-tls-template.yml
+++ b/kibana-docker-tls-template.yml
@@ -17,7 +17,7 @@ services:
       SERVER_SSL_KEY: $CERTS_DIR/kib01/kib01.key
       SERVER_SSL_CERTIFICATE: $CERTS_DIR/kib01/kib01.crt
     volumes:
-      - /$ELASTIC_STACK_NAME/$CERTS_VOLUME_NAME:$CERTS_DIR:Z
+      - /$ELASTIC_STACK_NAME/$CERTS_VOLUME_NAME:$CERTS_DIR:z
     networks:
       - elastic
     deploy:
@@ -25,12 +25,6 @@ services:
         constraints:
           - "node.hostname==${KIBANA_HOSTNAME}"
 volumes:
-  data01:
-    driver: local
-  data02:
-    driver: local
-  data03:
-    driver: local
   certs:
     driver: local
 
