--- a/kibana-docker-tls-template.yml
+++ b/kibana-docker-tls-template.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   kib01:
     image: docker.elastic.co/kibana/kibana:${VERSION}
-    container_name: kib01
+    #container_name: kib01
     ports:
       - 5601:5601
     environment:
