--- a/logstash-docker-tls-template.yml
+++ b/logstash-docker-tls-template.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   log01:
     image: docker.elastic.co/logstash/logstash:${VERSION}
-    container_name: log01
+    #container_name: log01
     ports:
       - 5514:5514/udp
     environment:
