--- a/elastic-docker-tls-template.yml
+++ b/elastic-docker-tls-template.yml
@@ -10,6 +10,7 @@ services:
       - discovery.seed_hosts=es02,es03
       - cluster.initial_master_nodes=es01
       - bootstrap.memory_lock=true
+      - node.master=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
       - xpack.license.self_generated.type=trial 
       - xpack.security.enabled=true
