Fix various issues.
Cluster initialization adjust seed and master nodes
Docker network can me specified in .env.  Use a default from docker example.
Increase java heap and values
Add Network options to rc.sh
Add logstash config to .gitignore

--- a/.env
+++ b/.env
@@ -12,3 +12,5 @@ LOGSTASH_STACK_NAME=jlastic-logstash
 LOGSTASH_HOSTNAME=logstash
 CERTS_STACK_NAME=certstack
 CERTS_VOLUME_NAME=certstack_certs
+DOCKER_NETWORK_SUBNET=10.11.0.0/16
+DOCKER_NETWORK_GATEWAY=10.11.0.2
