--- a/elastic-docker-tls-template.yml
+++ b/elastic-docker-tls-template.yml
@@ -6,6 +6,7 @@ services:
     #container_name: es01
     environment:
       - node.name=es01
+      - network.host=_eth0_
       - cluster.name=es-docker-cluster
       - discovery.seed_hosts=es01,es02,es03
       - cluster.initial_master_nodes=es01,es02,es03
@@ -49,6 +50,7 @@ services:
     #container_name: es02
     environment:
       - node.name=es02
+      - network.host=_eth0_
       - cluster.name=es-docker-cluster
       - discovery.seed_hosts=es01,es02,es03
       - cluster.initial_master_nodes=es01,es02,es03
@@ -85,6 +87,7 @@ services:
     #container_name: es03
     environment:
       - node.name=es03
+      - network.host=_eth0_
       - cluster.name=es-docker-cluster
       - discovery.seed_hosts=es01,es02,es03
       - cluster.initial_master_nodes=es01,es02,es03
